code: fix broken endpoints
